syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "DndL.Client";

package greet;

service CanvasService {
  rpc SendPoint (PointPacket) returns (google.protobuf.Empty);
  rpc PointSubscription(google.protobuf.Empty) returns (stream PointPacket);

  rpc SendClear(CanvasEventPacket) returns (google.protobuf.Empty);

  rpc CanvasSubcription(CanvasEventPacket) returns (google.protobuf.Empty);

}

service PartyService {
	rpc GetMembers(PartyMemberMessage) returns (stream PartyMemberMessage);


	rpc PartyStream(PartyMemberMessage) returns (stream google.protobuf.Empty);
}

message PointPacket {
	repeated int32 X = 1;
	repeated int32 Y = 2;
	string StrokeBrush = 3;
	int32 StrokeThickness = 4;
}

message CanvasEventPacket {
	int32 EventType = 1;
	string clientID = 2;
}

message IDMessage {
	string ID = 1;
}



message PartyMemberMessage {
	IDMessage ID = 1;
	string JSON = 2; // Serialized json of info, stats etc. 
}


